Fixing Outstanding Debt Calculation

--- a/ui.kv
+++ b/ui.kv
@@ -190,7 +190,7 @@
 			Spinner:
 				id: device_spinner
 				text: "UPI"
-				values: ["Cash","UPI","Credit Card", "Credit Card UPI"]
+				values: ["Cash","UPI","CREDIT_CARD", "CREDIT_CARD_UPI"]
 		BoxLayout:
 			size_hint_y: None
 			height: dp(52)
@@ -936,7 +936,7 @@
 							radius: [12,12,12,12]
 						TextInput:
 							id:	"Currency"
-							hint_text: "Initial Balance"
+							hint_text: "Currency"
 							background_color: rgba("#1E293BFF")
 							foreground_color: rgba("#E2E8F0FF")
 							padding: dp(16)
